CHATS_SIT/force-app/main/default/objects/Communication_Log__c.object
<CustomObject>
    <fields>
        <fullName>CC_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>To_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communication_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Communication Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>To_Email__c</columns>
		<columns>CC_Address__c</columns>
		<columns>Email_Subject__c</columns>
		<columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Communication Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Logs</pluralLabel>
    <recordTypes>
        <fullName>Last30DaysInActiveUsers</fullName>
        <active>true</active>
        <label>Last30DaysInActiveUsers</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>