CHATS_SIT/force-app/main/default/objects/Communication_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>To_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email_Subject__c</columns>
    <columns>CC_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>